# efootballcapk

./: .gitignore  add_backup.py  add_video_tutorial.py  admin_bot.py  admin_cmds.py  admin_panel.py  ai_helper.py  bot_update_log.md  build_apk.ps1  check.sh  clean_deploy.sh  config.py  config.py.bak  crypto_helper.py  db.py  db_backup_matchmaking.py  deploy2.sh  deploy_fix.sh  deploy_termux.py  efootball.db  handlers.py  handlers.py.bak  handlers_backup.py  handlers_backup_matchmaking.py  keepalive.py  lang.py  main.py  mega_update.py  ocr_helper.py  run_admin.py  run_bot.sh  run_bot_adb.bat  start_sshd_admin.sh  tail_admin.py  tail_logs.py  user_cmds.py  utils.py  window_dump2.xml
.agents/: AGENTS.md
.github/workflows/: android.yml
adb_qr_scanner/: app.py  requirements.txt
adb_qr_scanner/static/: style.css
adb_qr_scanner/templates/: index.html
android_app/: build.gradle  settings.gradle
android_app/app/: build.gradle
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: native-lib.cpp
android_app/app/src/main/java/com/efootball/app/: MainActivity.kt
cpp_bot/: CMakeLists.txt  build.bat  vcpkg.json
cpp_bot/src/: admin_cmds.cpp  admin_cmds.h  config.cpp  config.h  db.cpp  db.h  handlers.cpp  handlers.h  lang.cpp  lang.h  main.cpp  user_cmds.cpp  user_cmds.h  utils.cpp  utils.h
templates/: webapp.html
